--- a/templates/default.html
+++ b/templates/default.html
@@ -12,7 +12,9 @@
 
 <header>
   <p>
-    <a href="/">jonaswesterlund.se</a>
+    <abbr title="Jonas Westerlund">
+      <a href="/">JW</a>
+    </abbr>
   </p>
 </header>
 
